src/templates/blog-list.module.scss
.list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.list--item {
  padding: 1rem;
}

.page__meta {
  font-size: 0.8rem;
}

.pagination__container {
  display: block;
  clear: both;
  padding: 1rem 0;
}

.pagination__navigation {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.pagination__action {
  padding: 1rem;
  margin: 0 0.5rem;
  list-style: none;
  border: 1px solid #000;
  border-radius: 0.3rem;
}

